--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
@@ -14,7 +14,7 @@
     });
 }
 
-<article class="pd-variant row update-container" data-url="@updateUrl" itemscope itemtype="http://schema.org/Product">
+<article class="pd-variant row" itemscope itemtype="http://schema.org/Product">
     <div class="col-4 col-sm-6 col-lg-3">
         <div class="pd-variant-picture img-center-container">
             @if (img != null)
