Revamp grouped product: asynchronous update

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -630,7 +630,7 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
         transition: transform 0.35s;
     }
 
-    &.collapsed .collapse-chevron {
+    .expanded {
         transform: rotate(-180deg);
     }
 }
