--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.cshtml
@@ -3,18 +3,15 @@
 @model ProductDetailsModel
 
 @{
+    var skipUpdateUrl = (ViewData["SkipUpdateUrl"] as bool?) ?? false;
     var gallery = Model.MediaGalleryModel;
     var img = gallery.Files?.FirstOrDefault();
-
-    var updateUrl = Url.Action("UpdateProductDetails", "Product", new
-    {
-        productId = Model.Id,
-        bundleItemId = Model.BundleItem.Id,
-        itemType = "associateditem"
-    });
 }
 
-<article class="pd-variant row" itemscope itemtype="http://schema.org/Product">
+<article class="pd-variant row@(skipUpdateUrl ? string.Empty : " update-container")" 
+         attr-data-url='(!skipUpdateUrl, Model.UpdateUrl)'
+         itemscope 
+         itemtype="http://schema.org/Product">
     <div class="col-4 col-sm-6 col-lg-3">
         <div class="pd-variant-picture img-center-container">
             @if (img != null)
