--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -9,15 +9,9 @@
             @foreach (var product in Model.Products)
             {
                 var id = $"associated-product{product.Id}";
-                var viewData = CreateViewData(product);
-                var updateUrl = Url.Action("UpdateProductDetails", "Product", new
-                {
-                    productId = product.Id,
-                    bundleItemId = product.BundleItem.Id,
-                    itemType = "associateditem"
-                });
+                var viewData = CreateViewData(product, true);
 
-                <div class="card update-container" data-url="@updateUrl">
+                <div class="card update-container" data-url="@product.UpdateUrl">
                     <div class="card-header" data-partial="AssociatedHeader">
                         <partial name="Product.AssociatedProduct.Header" model="product" view-data="viewData" />
                     </div>
@@ -50,24 +44,28 @@
 
 <script sm-target-zone="scripts" data-origin="associated-products">
     $(function () {
-        $('#associated-products').on('click', '.pd-associated-product-title', function (e) {
-            if ($(e.target).closest('.pd-interaction').length) {
-                return;
-            }
+        const associatedProducts = $('#associated-products');
 
-            const title = $(this);
-            $(title.data('target')).collapse('toggle');
-            title.toggleClass('collapsed');
+        associatedProducts.on('click', '.pd-associated-product-title', function (e) {
+            if (!$(e.target).closest('.pd-interaction').length) {
+                $($(this).data('target')).collapse('toggle');
+            }
+        }).on('shown.bs.collapse hide.bs.collapse', function (e) {
+            associatedProducts.find('.collapse-chevron').removeClass('expanded');
+            if (e.type === 'shown') {
+                associatedProducts.find('.collapse.show').closest('.card').find('.collapse-chevron').addClass('expanded');
+            }
         });
     });
 </script>
 
 @{
-    ViewDataDictionary CreateViewData(ProductDetailsModel model)
+    ViewDataDictionary CreateViewData(ProductDetailsModel model, bool skipUpdateUrl = false)
     {
         var vd = new ViewDataDictionary(ViewData);
         vd.TemplateInfo.HtmlFieldPrefix = $"product_{model.Id}";
         vd["GroupedProductConfiguration"] = Model.Configuration;
+        vd["SkipUpdateUrl"] = skipUpdateUrl;
         return vd;
     }
 }
