--- a/src/Smartstore.Web/Areas/Admin/Views/Maintenance/SystemInfo.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Maintenance/SystemInfo.cshtml
@@ -313,7 +313,7 @@
             </div>
             <div class="d-none mt-3">
                 <div class="table-responsive">
-                    <table class="table table-sm table-striped">
+                    <table class="table table-sm table-striped small">
                         <thead>
                             <tr>
                                 <th>@T("Admin.System.SystemInfo.DbTableInfo.TableName")</th>
@@ -321,6 +321,10 @@
                                 <th class="text-right" nowrap>@T("Admin.System.SystemInfo.DbTableInfo.TotalSpace")</th>
                                 <th class="text-right" nowrap>@T("Admin.System.SystemInfo.DbTableInfo.UsedSpace")</th>
                                 <th class="text-right" nowrap>@T("Admin.System.SystemInfo.DbTableInfo.UnusedSpace")</th>
+                                @if (Model.OptimizeTableEnabled)
+                                {
+                                    <th nowrap>&nbsp;</th>
+                                }
                             </tr>
                         </thead>
                         <tbody>
@@ -329,9 +333,13 @@
                                 <tr>
                                     <td style="word-break: break-all">@info.TableName</td>
                                     <td class="text-right" nowrap>@info.NumRows.ToString("N0")</td>
-                                    <td class="text-right" nowrap>@Prettifier.HumanizeBytes(info.TotalSpace)</td>
+                                    <td class="text-right fwm" nowrap>@Prettifier.HumanizeBytes(info.TotalSpace)</td>
                                     <td class="text-right" nowrap>@Prettifier.HumanizeBytes(info.UsedSpace)</td>
                                     <td class="text-right" nowrap>@Prettifier.HumanizeBytes(info.TotalSpace - info.UsedSpace)</td>
+                                    @if (Model.OptimizeTableEnabled)
+                                    {
+                                        <td nowrap><a asp-action="OptimizeTable" asp-route-tableName="@info.TableName" class="pl-2">@T("Common.Shrink")</a></td>
+                                    }
                                 </tr>
                             }
                         </tbody>
