--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -17,7 +17,7 @@
      data-target="#@id" 
      aria-controls="@id">
     <div class="col-auto d-flex">
-        <div sm-if="@config.HasHeader("image")" class="pd-associated-product-img">
+        <div sm-if="@config.HasHeader(AssociatedProductHeader.Image)" class="pd-associated-product-img">
             @if (img != null)
             {
                 <img src="@img.GetUrl(gallery.ThumbSize)" alt="@(img?.Alt)" title="@(img?.TitleAttribute)" />
@@ -36,18 +36,18 @@
                 </div>
             </div>
             <div class="col-6 col-md-4 d-none d-md-flex flex-column flex-lg-row align-items-start justify-content-center align-items-lg-center fs-sm">
-                <div sm-if="@config.HasHeader("sku")" class="pd-associated-product-attr" title="@Model.Sku">
+                <div sm-if="@config.HasHeader(AssociatedProductHeader.Sku)" class="pd-associated-product-attr" title="@Model.Sku">
                     @Model.Sku
                 </div>
-                <div sm-if="@config.HasHeader("dimensions")" class="pd-associated-product-attr" title="@GetFormattedDimensions(true)">
+                <div sm-if="@config.HasHeader(AssociatedProductHeader.Dimensions)" class="pd-associated-product-attr" title="@GetFormattedDimensions(true)">
                     @GetFormattedDimensions(false)
                 </div>
-                <div sm-if="@config.HasHeader("weight")" class="pd-associated-product-attr" title="@Model.Weight">
+                <div sm-if="@config.HasHeader(AssociatedProductHeader.Weight)" class="pd-associated-product-attr" title="@Model.Weight">
                     @Model.Weight
                 </div>
             </div>
             <div class="col-6 col-md-2 d-flex mt-2 mt-md-0 align-items-center justify-content-start justify-content-md-end">
-                <span sm-if="@config.HasHeader("price")" class="pd-associated-product-price">
+                <span sm-if="@config.HasHeader(AssociatedProductHeader.Price)" class="pd-associated-product-price">
                     @Html.Raw(Model.Price.FinalPrice)
                 </span>
             </div>
