--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProduct.Header.cshtml
@@ -69,7 +69,7 @@
                         <i class="fa fa-cart-arrow-down"></i>
                     </a>
                 </div>
-                <i class="fas fa-angle-down collapse-chevron m-0 ml-2"></i>
+                <i class="fas fa-angle-up collapse-chevron m-0 ml-2"></i>
             </div>
         </div>
     </div>
