Revamp grouped product: renaming "collapsable" > "collapsible"

--- a/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Product/_CreateOrUpdate.Info.cshtml
@@ -155,14 +155,14 @@
         </div>
         <div class="adminRow">
             <div class="adminTitle">
-                <smart-label asp-for="GroupedProductConfiguration.Collapsable" />
+                <smart-label asp-for="GroupedProductConfiguration.Collapsible" />
             </div>
             <div class="adminData">
-                <input asp-for="GroupedProductConfiguration.Collapsable" data-toggler-for="#grouped-product-config-collapsable" />
-                <span asp-validation-for="GroupedProductConfiguration.Collapsable"></span>
+                <input asp-for="GroupedProductConfiguration.Collapsible" data-toggler-for="#grouped-product-config-collapsible" />
+                <span asp-validation-for="GroupedProductConfiguration.Collapsible"></span>
             </div>
         </div>
-        <div id="grouped-product-config-collapsable" class="adminRow">
+        <div id="grouped-product-config-collapsible" class="adminRow">
             <div class="adminTitle">
                 <smart-label asp-for="GroupedProductConfiguration.HeaderFields" />
             </div>
