--- a/src/Smartstore.Web/Areas/Admin/Views/Module/List.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Module/List.cshtml
@@ -255,8 +255,13 @@
         // about modules to be installed and uninstalled
         btnExecuteTasks.tooltip({
             html: true,
-            placement: 'right',
-            boundary: 'viewport',
+            placement: 'bottom',
+            popperConfig: {
+                modifiers: {
+                    flip: { enabled: false },
+                    arrow: { element: '.arrow' }
+                }
+            },
 			title: function () {
 				let text = '';
 
