--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -2,6 +2,12 @@
 
 @model GroupedProductModel
 
+@*
+    TODO: (mg) (low prio) List needs title: Ausführungen (DE) / Variations (EN) (configurable on product level as part of ProductTypeConfiguration). TBD with MC.
+    TODO: (mg) PageSize should also apply to (ungrouped) default template
+    TODO: (mc) Revamp accordion design: gray headers, titles above accordion etc.
+*@
+
 <div id="associated-products">
     @if (Model.Configuration.Collapsible)
     {
