--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -4,7 +4,7 @@
 
 <div sm-if="Model.Products.TotalCount >= Model.Configuration.SearchMinAssociatedCount" class="instasearch-form has-icon col-4 mb-2">
     <input type="text"
-           class="instasearch-term form-control"
+           class="instasearch-term form-control skip-pd-ajax-update"
            name="associatedProductsSearchTerm"
            placeholder="@T("Common.SearchProducts")"
            data-url="@Url.Action("AssociatedProducts", "Product", new { id = Model.Id })"
