Grouped product review

--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -61,6 +61,6 @@
         <pagination sm-list-items="Model.Products" class="mt-2"
                     sm-alignment="Left"
                     sm-url="@Url.Action("AssociatedProducts", "Product", new { id = Model.Id })"
-                    sm-target="#associated-products" />
+                    sm-content-target="#associated-products" />
     }
 </div>
